Redefiniendo la variable SERVER_PORT por CONTAINER_PORT

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,12 @@ services:
     build:
       context: .
       args:
-        SERVER_PORT: ${SERVER_PORT}
+        HOST_PORT: ${HOST_PORT}
     image: spring-boot-docker:v1.0.0
     restart: unless-stopped
     env_file:
       - ${ENV_FILE}
     expose:
-      - ${SERVER_PORT}
+      - ${HOST_PORT}
     ports:
-      - ${SERVER_PORT}:${HOST_PORT}
+      - ${HOST_PORT}:${CONTAINER_PORT}
