--- a/.env.dev
+++ b/.env.dev
@@ -4,19 +4,20 @@ ACTIVE_PROFILE=dev
 # Database
 POSTGRES_SQL_USERNAME=postgres
 POSTGRES_SQL_PASSWORD=magadiflo
-POSTGRES_SQL_HOST=127.0.0.1
+POSTGRES_SQL_HOST=192.168.0.10
 POSTGRES_SQL_PORT=5432
 POSTGRES_SQL_DB=db_spring_boot_email
 
-# Server
-SERVER_PORT=8081
+# Host and Container
+HOST_PORT=8081
+CONTAINER_PORT=8081
 
-## Email Config
+# Email Config
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_ID=magadiflo@gmail.com
 EMAIL_PASSWORD=${EMAIL_PASSWORD}
-VERIFY_EMAIL_HOST=http://localhost:${SERVER_PORT}
+VERIFY_EMAIL_HOST=http://localhost:${CONTAINER_PORT}
 
+# FrontEnd
 UI_APP_URL=http://localhost:4200
-HOST_PORT=8000
