--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 services:
   spring-boot-docker:
-    container_name: spring-boot-docker-container
+    container_name: ${CONTAINER_NAME}
     build:
       context: .
       args:
         HOST_PORT: ${HOST_PORT}
-    image: spring-boot-docker:v1.0.0
+    image: spring-boot-docker:${TAG}
     restart: unless-stopped
     env_file:
       - ${ENV_FILE}
